mondoo.io --> mondoo.com

--- a/config/manager/controller_manager_config.yaml
+++ b/config/manager/controller_manager_config.yaml
@@ -8,4 +8,4 @@ webhook:
   port: 9443
 leaderElection:
   leaderElect: true
-  resourceName: 5b3a8922.mondoo.io
+  resourceName: 5b3a8922.mondoo.com
