working up to interfacing with mondoo image
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/crd/bases/mondoo.mondoo.com_mondooes.yaml
+++ b/config/crd/bases/mondoo.mondoo.com_mondooes.yaml
@@ -36,7 +36,7 @@ spec:
           spec:
             description: MondooSpec defines the desired state of Mondoo
             properties:
-              "1":
+              size:
                 description: Foo is an example field of Mondoo. Edit mondoo_types.go
                   to remove/update
                 format: int32
