--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -30,7 +30,7 @@ spec:
         args:
         - --leader-elect
         image: controller:latest
-        imagePullPolicy: Never
+        imagePullPolicy: IfNotPresent 
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
