remove memcache from docs etc.
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/crd/bases/mondoo.mondoo.com_mondooes.yaml
+++ b/config/crd/bases/mondoo.mondoo.com_mondooes.yaml
@@ -46,7 +46,7 @@ spec:
             description: MondooStatus defines the observed state of Mondoo
             properties:
               nodes:
-                description: Nodes store the name of the pods which are running Memcached
+                description: Nodes store the name of the pods which are running mondoo
                   instances
                 items:
                   type: string
