1. adding volumemounts, envs to base daemonset. 2. adding configmap for mondoo config and interface to the CR.
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/crd/bases/mondoo.mondoo.com_mondooes.yaml
+++ b/config/crd/bases/mondoo.mondoo.com_mondooes.yaml
@@ -26,15 +26,19 @@ spec:
               of an object. Servers should convert recognized schemas to the latest
               internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
+          data:
+            description: MondooData defines config for Mondoo
+            properties:
+              config:
+                description: config is mondoo configuration
+                type: string
+            type: object
           kind:
             description: 'Kind is a string value representing the REST resource this
               object represents. Servers may infer this from the endpoint the client
               submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
-            type: object
-          spec:
-            description: MondooSpec defines the desired state of Mondoo
             type: object
           status:
             description: MondooStatus defines the observed state of Mondoo
