--- a/example/daemonset.yaml
+++ b/example/daemonset.yaml
@@ -45,3 +45,5 @@ spec:
             items:
               - key: config
                 path: mondoo.yml
+              - key: inventory
+                path: inventory.yml
