--- a/example/daemonset.yaml
+++ b/example/daemonset.yaml
@@ -27,7 +27,7 @@ spec:
               mountPath: /mnt/host/
               readOnly: true
             - name: config
-              mountPath: /etc/opt/mondoo/
+              mountPath: /etc/opt/
               readOnly: true
           env:
             - name: DEBUG
@@ -40,10 +40,16 @@ spec:
           hostPath:
             path: "/"
         - name: config
-          configMap:
-            name: mondoo-daemonset-config
-            items:
-              - key: config
-                path: mondoo.yml
-              - key: inventory
-                path: inventory.yml
+          projected:
+            sources:
+              - secret:
+                  name: mondoo-credentials
+                  items:
+                    - key: config
+                      path: mondoo/mondoo.yml
+                  path: 
+              - configMap:
+                  name: mondoo-inventory
+                  items:
+                    - key: inventory
+                      path: mondoo/inventory.yml
