--- a/config/crd/bases/k8s.mondoo.com_mondooclients.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooclients.yaml
@@ -33,6 +33,8 @@ spec:
                 description: Config is an example field of MondooClient. Edit mondooclient_types.go
                   to remove/update
                 type: string
+              inventory:
+                type: string
             type: object
           kind:
             description: 'Kind is a string value representing the REST resource this
