🧹 restructure example to include single job scan, kube api scan and kube node scan
- update readme to work with fresh minikube
- switch to default namespace since that is the namespace that is always available
- move job to job subdirectory
- update inventory files to not be conflicting if examples are deployed in parallel

Signed-off-by: Christoph Hartmann <chris@lollyrock.com>

--- a/example/job/mondoo-inventory.yaml
+++ b/example/job/mondoo-inventory.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mondoo-inventory
+  name: mondoo-job-inventory
 data:
   inventory: |
     apiVersion: v1
@@ -14,8 +14,8 @@ data:
       assets:
         - id: host
           connections:
-            - host: /mnt/host
-              backend: fs
+            - backend: fs
+              host: /mnt/host
         - id: api
           connections:
             - backend: k8s
