--- a/example/job/job.yaml
+++ b/example/job/job.yaml
@@ -31,6 +31,7 @@ spec:
               value: "false"
             - name: MONDOO_PROCFS
               value: "on"
+      serviceAccountName: mondoo-sa
       restartPolicy: Never
       volumes:
         - name: root
@@ -45,7 +46,7 @@ spec:
                     - key: config
                       path: mondoo/mondoo.yml
               - configMap:
-                  name: mondoo-inventory
+                  name: mondoo-job-inventory
                   items:
                     - key: inventory
                       path: mondoo/inventory.yml
