--- a/example/kube-scanner/mondoo-inventory.yaml
+++ b/example/kube-scanner/mondoo-inventory.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mondoo-inventory
+  name: mondoo-kube-inventory
 data:
   inventory: |
     apiVersion: v1
