--- a/example/node-scanner/daemonset.yaml
+++ b/example/node-scanner/daemonset.yaml
@@ -48,7 +48,7 @@ spec:
                     - key: config
                       path: mondoo/mondoo.yml
               - configMap:
-                  name: mondoo-inventory
+                  name: mondoo-node-inventory
                   items:
                     - key: inventory
                       path: mondoo/inventory.yml
