--- a/example/node-scanner/mondoo-inventory.yaml
+++ b/example/node-scanner/mondoo-inventory.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mondoo-inventory
+  name: mondoo-node-inventory
 data:
   inventory: |
     apiVersion: v1
