--- a/config/crd/bases/k8s.mondoo.com_mondooclients.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooclients.yaml
@@ -40,6 +40,7 @@ spec:
                   inventory:
                     type: string
                   replicas:
+                    format: int32
                     type: integer
                 type: object
               kubenodes:
