🧹 Change MondooConfig defaults from disabled to enabled (#39)
Signed-off-by: Harsha <harshaisgud@gmail.com>

Co-authored-by: Christoph Hartmann <chris@lollyrock.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooclients.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooclients.yaml
@@ -31,7 +31,7 @@ spec:
             properties:
               kubeapi:
                 properties:
-                  disabled:
+                  enable:
                     type: boolean
                   inventory:
                     type: string
@@ -43,7 +43,7 @@ spec:
                 description: Config is an example field of MondooClient. Edit mondooclient_types.go
                   to remove/update
                 properties:
-                  disabled:
+                  enable:
                     type: boolean
                   inventory:
                     type: string
