--- a/config/samples/k8s_v1alpha1_mondooclient.yaml
+++ b/config/samples/k8s_v1alpha1_mondooclient.yaml
@@ -3,3 +3,8 @@ kind: MondooClient
 metadata:
   name: mondoo-client
   namespace: mondoo-operator-system
+data:
+  kubeapi:
+    enable: true
+  kubenodes:
+    enable: true
