Variable MondooSA secret name
Signed-off-by: Harsha <harshaisgud@gmail.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooclients.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooclients.yaml
@@ -48,6 +48,10 @@ spec:
                   inventory:
                     type: string
                 type: object
+              mondoosasecret:
+                type: string
+            required:
+            - mondoosasecret
             type: object
           kind:
             description: 'Kind is a string value representing the REST resource this
