--- a/config/samples/k8s_v1alpha1_mondooclient.yaml
+++ b/config/samples/k8s_v1alpha1_mondooclient.yaml
@@ -4,8 +4,10 @@ metadata:
   name: mondoo-client
   namespace: mondoo-operator-system
 data:
-  kubeapi:
+  workloads:
     enable: true
-  kubenodes:
+    workloadserviceaccount: mondoo-operator-workload
+  nodes:
     enable: true
   mondoosecretref: mondoo-client
+  
