--- a/config/samples/k8s_v1alpha1_mondooclient.yaml
+++ b/config/samples/k8s_v1alpha1_mondooclient.yaml
@@ -7,6 +7,7 @@ data:
   workloads:
     enable: true
     workloadserviceaccount: mondoo-operator-workload
+    replicas: 4
   nodes:
     enable: true
   mondoosecretref: mondoo-client
