--- a/.github/workflows/generate-manifests.yml
+++ b/.github/workflows/generate-manifests.yml
@@ -8,7 +8,7 @@ on:
     tags:
       - 'v*'
 jobs:
-  unit-tests:
+  generate-manifests:
     runs-on: ubuntu-latest
     name: generate manifests
     steps:
