--- a/.github/workflows/generate-manifests.yml
+++ b/.github/workflows/generate-manifests.yml
@@ -13,5 +13,9 @@ jobs:
     name: generate manifests
     steps:
     - uses: actions/checkout@v2
+    - name: Import environment variables from file
+      run: cat ".github/env" >> $GITHUB_ENV
     - uses: actions/setup-go@v2
+      with:
+        go-version: '${{ env.golang-version }}'
     - run: make deploy-yml
