--- a/.github/workflows/e2e.yml.yaml
+++ b/.github/workflows/e2e.yml.yaml
@@ -30,8 +30,8 @@ jobs:
     - name: Deploy to minikube
       run: |
         make deploy
-        echo ${{ secrets.MONDOO_CLIENT }} > creds.yml
-        kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yml
+        echo ${{ secrets.MONDOO_CLIENT }} > creds.yaml
+        kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
         kubectl apply -f config/samples/k8s_v1alpha1_mondooclient.yaml
     - name: Verify a Kubernetes Application
       run: |
