--- a/example/job/job.yaml
+++ b/example/job/job.yaml
@@ -14,9 +14,9 @@ spec:
               "mondoo",
               "scan",
               "--inventory",
-              "/etc/opt/mondoo/inventory.yml",
+              "/etc/opt/mondoo/inventory.yaml",
               "--config",
-              "/etc/opt/mondoo/mondoo.yml",
+              "/etc/opt/mondoo/mondoo.yaml",
               "--exit-0-on-success",
             ]
           volumeMounts:
@@ -44,9 +44,9 @@ spec:
                   name: mondoo-credentials
                   items:
                     - key: config
-                      path: mondoo/mondoo.yml
+                      path: mondoo/mondoo.yaml
               - configMap:
                   name: mondoo-job-inventory
                   items:
                     - key: inventory
-                      path: mondoo/inventory.yml
+                      path: mondoo/inventory.yaml
