--- a/example/kube-scanner/deployment.yaml
+++ b/example/kube-scanner/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
         - name: mondoo-agent
           image: docker.io/mondoolabs/mondoo:latest
-          command: ["mondoo", "serve", "--config", "/etc/opt/mondoo/mondoo.yml"]
+          command: ["mondoo", "serve", "--config", "/etc/opt/mondoo/mondoo.yaml"]
           volumeMounts:
             - name: root
               mountPath: /mnt/host/
@@ -46,9 +46,9 @@ spec:
                   name: mondoo-credentials
                   items:
                     - key: config
-                      path: mondoo/mondoo.yml
+                      path: mondoo/mondoo.yaml
               - configMap:
                   name: mondoo-kube-inventory
                   items:
                     - key: inventory
-                      path: mondoo/inventory.yml
+                      path: mondoo/inventory.yaml
