--- a/.github/workflows/generate-manifests.yml.yaml
+++ b/.github/workflows/generate-manifests.yml.yaml
@@ -18,4 +18,4 @@ jobs:
     - uses: actions/setup-go@v2
       with:
         go-version: '${{ env.golang-version }}'
-    - run: make deploy-yml
+    - run: make deploy-yaml
