🐛 fix the manifest generation
Signed-off-by: Christoph Hartmann <chris@lollyrock.com>

--- a/.github/workflows/generate-manifests.yaml
+++ b/.github/workflows/generate-manifests.yaml
@@ -11,6 +11,8 @@ jobs:
   generate-manifests:
     runs-on: ubuntu-latest
     name: Generate manifests
+    env:
+      IMG_DOCKERHUB: docker.io/mondoolabs/mondoo-operator:latest
     steps:
     - uses: actions/checkout@v2
     - name: Import environment variables from file
