--- a/.github/workflows/generate-manifests.yaml
+++ b/.github/workflows/generate-manifests.yaml
@@ -1,12 +1,11 @@
-
 name: generate-manifests
 on:
   pull_request:
   push:
     branches:
-      - 'main'
+      - "main"
     tags:
-      - 'v*'
+      - "v*"
 jobs:
   generate-manifests:
     runs-on: ubuntu-latest
@@ -14,10 +13,10 @@ jobs:
     env:
       IMG_DOCKERHUB: docker.io/mondoolabs/mondoo-operator:latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Import environment variables from file
-      run: cat ".github/env" >> $GITHUB_ENV
-    - uses: actions/setup-go@v2
-      with:
-        go-version: '${{ env.golang-version }}'
-    - run: make deploy-yaml
+      - uses: actions/checkout@v2
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "${{ env.golang-version }}"
+      - run: make deploy-yaml
