--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -3,18 +3,18 @@ on:
   pull_request:
   push:
     branches:
-      - 'main'
+      - "main"
     tags:
-      - 'v*'
+      - "v*"
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
     name: Unit tests
     steps:
-    - uses: actions/checkout@v2
-    - name: Import environment variables from file
-      run: cat ".github/env" >> $GITHUB_ENV
-    - uses: actions/setup-go@v2
-      with:
-        go-version: '${{ env.golang-version }}'
-    - run: make test
+      - uses: actions/checkout@v2
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "${{ env.golang-version }}"
+      - run: make test
