--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -12,5 +12,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: ghcr.io/mondoolabs/mondoo-operator
-  newTag: sha256-c79f8cd12b348b79b5f75e2f0497df3fb9601e7a.sigs
+  newName: go.mondoo.com/mondoo-operator
+  newTag: v0.0.1
