⭐️ adding separate manifest generator make call (#51)
* adding separate manifest generator make call
* adding user-manual readme

Signed-off-by: jensgrnb <jens.grunborg@endocode.com>
Co-authored-by: Christoph Hartmann <chris@lollyrock.com>

* 🧹 update the install instruction to include the operator configuration
* 🐛 fix the manifest generation
* 🧹 reformat yaml

Signed-off-by: Christoph Hartmann <chris@lollyrock.com>

--- a/.github/workflows/generate-manifests.yaml
+++ b/.github/workflows/generate-manifests.yaml
@@ -1,4 +1,4 @@
-name: unit
+name: generate-manifests
 on:
   pull_request:
   push:
@@ -7,9 +7,11 @@ on:
     tags:
       - "v*"
 jobs:
-  unit-tests:
+  generate-manifests:
     runs-on: ubuntu-latest
-    name: Unit tests
+    name: Generate manifests
+    env:
+      IMG_DOCKERHUB: docker.io/mondoolabs/mondoo-operator:latest
     steps:
       - uses: actions/checkout@v2
       - name: Import environment variables from file
@@ -17,4 +19,4 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: "${{ env.golang-version }}"
-      - run: make test
+      - run: make deploy-yaml
