tryout bundle publishing using workflows
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/bundle/manifests/mondoo-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/mondoo-operator.clusterserviceversion.yaml
@@ -206,7 +206,7 @@ spec:
                 - --leader-elect
                 command:
                 - /manager
-                image: go.mondoo.com/mondoo-operator:v0.0.1
+                image: ghcr.io/mondoolabs/mondoo-operator:latest
                 imagePullPolicy: IfNotPresent
                 livenessProbe:
                   httpGet:
