--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -12,5 +12,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: go.mondoo.com/mondoo-operator
-  newTag: v0.0.1
+  newName: ghcr.io/mondoolabs/mondoo-operator
