--- a/helm/mondoo-operator/values.yaml
+++ b/helm/mondoo-operator/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: controller
+  repository: mondoolabs/mondoo-operator
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
