--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -25,7 +25,7 @@ jobs:
         run: kubectl get pods -A
       - uses: azure/setup-helm@v1
         with:
-          version: 'default' 
+          version: 'v3.8.0'
         id: install
       - name: Build image
         run: |
