wip: operator-sdk in e2e test
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -18,24 +18,32 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: "${{ env.golang-version }}"
-      - name: Start minikube
-        uses: medyagh/setup-minikube@master
-      - name: Try the cluster !
-        run: kubectl get pods -A
-      - name: Build controller image
+      # - name: Start minikube
+      #   uses: medyagh/setup-minikube@master
+      # - name: Try the cluster !
+      #   run: kubectl get pods -A
+      # - name: Build controller and bundle images
+      #   run: |
+      #     export SHELL=/bin/bash
+      #     eval $(minikube -p minikube docker-env)
+      #     make docker-build
+      #     make bundle-build
+      - name: Get operator-sdk
         run: |
-          export SHELL=/bin/bash
-          eval $(minikube -p minikube docker-env)
-          make docker-build
-          make bundle-build
-      - name: get operator-sdk
-        uses: shivanshs9/setup-k8s-operator-sdk@v1
-        with:
-          version: "1.15.0"
-      - name: Build docker images
+          export ARCH=$(case $(uname -m) in x86_64) echo -n amd64 ;; aarch64) echo -n arm64 ;; *) echo -n $(uname -m) ;; esac)
+          export OS=$(uname | awk '{print tolower($0)}')
+          export OPERATOR_SDK_DL_URL=https://github.com/operator-framework/operator-sdk/releases/download/v1.17.0
+          curl -LO ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH}
+          gpg --keyserver keyserver.ubuntu.com --recv-keys 052996E2A20B5C7E
+          curl -LO ${OPERATOR_SDK_DL_URL}/checksums.txt
+          curl -LO ${OPERATOR_SDK_DL_URL}/checksums.txt.asc
+          gpg -u "Operator SDK (release) <cncf-operator-sdk@cncf.io>" --verify checksums.txt.asc
+          grep operator-sdk_${OS}_${ARCH} checksums.txt | sha256sum -c -
+          chmod +x operator-sdk_${OS}_${ARCH} && sudo mv operator-sdk_${OS}_${ARCH} /usr/local/bin/operator-sdk
+      - name: Deploy to minikube with olm
         run: |
           operator-sdk olm install
-          operator-sdk run bundle
+          operator-sdk run bundle --namespace mondoo-operator-system
           echo ${{ secrets.MONDOO_CLIENT }} > creds.yaml
           kubectl create secret generic mondoo-client --namespace mondoo-operator-system --from-file=config=creds.yaml
           kubectl apply -f config/samples/k8s_v1alpha1_mondooclient.yaml
