--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -18,10 +18,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: "${{ env.golang-version }}"
-      # - name: Start minikube
-      #   uses: medyagh/setup-minikube@master
-      # - name: Try the cluster !
-      #   run: kubectl get pods -A
+      - name: Start minikube
+        uses: medyagh/setup-minikube@master
+      - name: Try the cluster !
+        run: kubectl get pods -A
       # - name: Build controller and bundle images
       #   run: |
       #     export SHELL=/bin/bash
