--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -74,7 +74,7 @@ jobs:
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push operator image
-        id: build-and-push
+        id: build-and-push-operator
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
@@ -92,7 +92,7 @@ jobs:
 
       # Build and push Docker image bundle with Buildx (don't push on PR)
       - name: Build and push bundle image
-        id: build-and-push
+        id: build-and-push-bundle
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
